fix(not-found): fix color for dark mode

--- a/src/components/layout/not-found.scss
+++ b/src/components/layout/not-found.scss
@@ -54,15 +54,6 @@
 }
 }
 
-// button {
-//   border: none;
-//   padding: 0;
-//   font-size: 0;
-//   line-height: 0;
-//   background: none;
-//   cursor: pointer;
-// }
-
 :focus {
   outline: 0;
 }
@@ -111,26 +102,26 @@
           transform: translate(-50%, -50%);
 }
 
-.error__message {
-  text-align: center;
-  color: #181828;
-}
+// .error__message {
+//   text-align: center;
+//   color: #181828;
+// }
 
-.message__title {
-  font-weight: 900;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-   font-size: 5.6rem;
-  padding-bottom: 40px;
-  margin: 0 auto;
-color:#000}
+// .message__title {
+//   font-weight: 900;
+//   text-transform: uppercase;
+//   letter-spacing: 5px;
+//    font-size: 5.6rem;
+//   padding-bottom: 40px;
+//   margin: 0 auto;
+// }
 
-.message__text {
-  line-height: 42px;
-  font-size: 18px;
-  max-width: 680px;
-  margin: auto;
-color:#000}
+// .message__text {
+//   line-height: 42px;
+//   font-size: 18px;
+//   max-width: 680px;
+//   margin: auto;
+// }
 
 .error__nav {
   max-width: 600px;
@@ -156,7 +147,6 @@ color:#000}
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  color: #212121;
   -webkit-transition: color .25s ease;
   transition: color .25s ease;
 }
@@ -169,7 +159,6 @@ color:#000}
   vertical-align: top;
   margin: 0 15px;
   border: 1px solid #181828;
-  color: #181828;
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
@@ -450,7 +439,7 @@ color:#000}
 =======================*/
 
 
-.page_404{ padding:40px 0; background:#fff;
+.page_404{ padding:40px 0;
 }
 
 .page_404  img{ width:100%;}
